Өмнөх сарын ээлжийн төлөвлөгөөг баталгаажуулалттай хуулах үйлдэл нэмэв
